--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,6 @@ loom_version=1.6-SNAPSHOT
 archives_base_name=roulette-mod
 mod_version=1.0.0
 maven_group=dev.diego
-java_version=21
+java_version=24
+org.gradle.java.home=C:/Program Files/Java/jdk-24
+
